# aptly_manager

./: Cargo.toml  README.md
libs/aptly_lib/: Cargo.toml  README.md
libs/aptly_lib/src/: debian.rs  lib.rs  ubuntu.rs
src/: main.rs
src/tests/: test_defaultoptions.rs
