[package]
name = "aptly_manager"
version = "0.1.0"
edition = "2021"
license = "gpl-2.0-only"
description = "A tool for managing debian mirrors. Uses aptly for the grunt work."
readme = "README.md"
repository = "https://github.com/rrbrussell/aptly_manager"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "libs/aptly_lib",
]

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
toml = "0.5"
serde = { version = "1.0.0", features = ["derive"] }
strum = { version = "0.22.0", features = ["derive"] }
strum_macros = "0.22.0"
aptly_lib = { version = "0.1.*", path = "libs/aptly_lib" }