[package]
name = "aptly_manager"
authors = ["Robert R. Russell"]
version = "0.1.1"
edition = "2021"
license = "gpl-2.0-only"
description = "A tool for managing debian mirrors. Uses aptly for the grunt work."
readme = "README.md"
repository = "https://github.com/rrbrussell/aptly_manager"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]


[workspace]
members = [
  "libs/aptly_lib",
]

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
toml = "0.5"
serde = { version = "1.0.0", features = ["derive"] }
strum = { version = "0.22.0", features = ["derive"] }
strum_macros = "0.22.0"
aptly_lib = { version = "0.1.*", path = "libs/aptly_lib" }
string_template = "0.2.*"