[package]
name = "aptly_lib"
version = "0.1.0"
edition = "2021"
license = "gpl-2.0-only"
description = "A support library for aptly_manager"
readme = "README.md"
repository = "https://github.com/rrbrussell/aptly_manager"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.22.0", features = ["derive"] }
strum_macros = "0.22.0"